--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+  <link rel="stylesheet" href="main.css">
   <title>L'atelier de Saint Guénolé</title>
 </head>
 <body>
@@ -15,7 +16,7 @@
     </div>
 <br>
   <div class="container">
-    <nav class="navbar " role="navigation">
+    <nav class="navbar" role="navigation">
       <div class="navbar-menu is-active">
 
           <a href="index.html" class="navbar-item">Accueil</a>
@@ -34,12 +35,14 @@
   <section class="section">
     <div class="container">
       <div class="content">
-        <p>L’Atelier de St-Gué est un lieu de création, d’échange et de partage autour des arts plastiques situé en Pays Bigouden à Saint-Guénolé, Penmarch. <br>
+        <p>
+          L’Atelier de St-Gué est un lieu de création, d’échange et de partage autour des arts plastiques situé en Pays Bigouden à Saint-Guénolé, Penmarch. <br>
           Marie-Laure Moulart-Barcelo - artiste-mosaïste et art-thérapeute - 
           vous accueille à l’Atelier pour vous initier à sa pratique artistique à travers des cours et stages de mosaïque ponctuels ou réguliers et ouverts à toutes et tous. <br>
           Visiter l’Atelier est aussi l’occasion de découvrir les créations originales de Marie-Laure ou de lui passer une commande personnalisée. <br>
           Enfin, vous pouvez bénéficier à l’Atelier de séances d’art thérapie : un accompagnement thérapeutique individualisé qui exploite votre potentiel artistique pour retrouver sérénité et joie de vivre.
-          </p>
+
+        </p>
 
       </div>
     </div>
