--- a/index.html
+++ b/index.html
@@ -1,60 +1,273 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
-  <title>L'atelier de Saint Guénolé</title>
-</head>
-<body>
-  
-  <header class="section">
-    <div class="container">
-      <h1 class="title has-text-centered">L'atelier de Saint Gué</h1>
-    </div>
-<br>
-  <div class="container">
-    <nav class="navbar " role="navigation">
-      <div class="navbar-menu is-active">
+	<head>
+		<meta charset="UTF-8" />
+		<title>>MLMB Art-Thérapie</title>
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0"
+		/>
+		<link rel="stylesheet" href="style.css" />
+		<link
+			rel="preconnect"
+			href="https://fonts.gstatic.com"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&family=Quicksand:wght@300;400;500;600;700&display=swap"
+			rel="stylesheet"
+		/>
+	</head>
 
-          <a href="index.html" class="navbar-item">Accueil</a>
+	<body>
+		<section class="LandingPage">
+			<canvas
+				class="Board-Canvas"
+				id="canvas1"
+			></canvas>
+			<nav class="Navbar">
+				<ul class="Navbar-menu">
+					<li>
+						<a
+							href="#section1"
+							class="Menu-item Link"
+							>Accueil
+						</a>
+					</li>
+					<li>
+						<a
+							href="#section2"
+							class="Menu-item Link"
+							>Galerie</a
+						>
+					</li>
+					<li>
+						<a
+							href="#section3"
+							class="Menu-item Link"
+							>Les cours et stages de mosaiques</a
+						>
+					</li>
+					<li>
+						<a
+							href="#section4"
+							class="Menu-item Link"
+							>&nbsp;Contact&nbsp;</a
+						>
+					</li>
+				</ul>
+			</nav>
+			<div class="Presentation">
+				<div class="Presentation-conteneur">
+					<div class="ArtTherapie">
+						L ' Atelier <br />
+						&nbsp;de Saint-Gué
+					</div>
+					<!-- <div class="Noms">
+						<div class="MarieLaure Nom">
+							Marie-Laure
+						</div>
+						<div class="MoulartBarcelo Nom">
+							Moulart Barcelo
+						</div>
+					</div> -->
+				</div>
+			</div>
+		</section>
+		<section id="section2">
+			<header class="BigTitle-Container">
+				<h1 class="BigTitle">
+					<!-- L o r e m &nbsp;&nbsp;&nbsp; I p s u m -->
+				</h1>
+			</header>
+			<div class="Section-Content">
+				<aside class="AsideBlock">
+					<img class="Image" src="mlmb.jpg" />
+				</aside>
+				<div class="TextContent">
+					<div class="TextBlock">
+						<h2 class="Subtitle">
+							Venez rencontrer...
+						</h2>
+						<p class="Paragraph">
+							Marie-Laure Moulart-Barcelo -
+							artiste-mosaïste et art-thérapeute -
+							vous accueille à l’Atelier pour vous
+							initier à sa pratique artistique à
+							travers des cours et stages de
+							mosaïque ponctuels ou réguliers et
+							ouverts à toutes et tous. <br />
+						</p>
+						<!-- <p class="Paragraph">
+							L’Atelier de St-Gué est un lieu de création, d’échange et de partage autour des arts plastiques situé en Pays Bigouden à Saint-Guénolé, Penmarch.
+						</p> -->
+					</div>
+					<div class="TextBlock">
+						<h2 class="Subtitle">L'atelier...</h2>
+						<p class="Paragraph">
+							L’Atelier de St-Gué est un lieu de
+							création, d’échange et de partage
+							autour des arts plastiques situé en
+							Pays Bigouden à Saint-Guénolé,
+							Penmarch.
+						</p>
+					</div>
+				</div>
+			</div>
+		</section>
 
-          <a href="galerie.html" class="navbar-item">Galerie</a>
+		<section id="section3">
+			<header class="BigTitle-Container">
+				<h1 class="BigTitle">
+					L o r e m &nbsp;&nbsp;&nbsp; I p s u m
+				</h1>
+			</header>
+			<div class="Section-Content">
+				<div class="TextContent">
+					<div class="TextBlock">
+						<h2 class="Subtitle">
+							Uod nesciunt recusandae
+						</h2>
+						<p class="Paragraph">
+							Lorem ipsum dolor sit amet
+							consectetur, adipisicing elit.
+							Adipisci mollitia voluptates ad,
+							illum voluptatum aliquam quod
+							nesciunt recusandae dignissimos sunt
+							dolore eius facere nam optio quae
+							molestiae? A, est beatae?
+						</p>
+						<p class="Paragraph">
+							Lorem ipsum dolor sit amet
+							consectetur, adipisicing elit.
+							Adipisci mollitia voluptates ad,
+							illum voluptatum aliquam quod
+							nesciunt recusandae dignissimos sunt
+							dolore eius facere nam optio quae
+							molestiae? A, est beatae?
+						</p>
+					</div>
+					<div class="TextBlock">
+						<h2 class="Subtitle">
+							Uod nesciunt recusandae
+						</h2>
+						<p class="Paragraph">
+							Lorem ipsum dolor sit amet
+							consectetur, adipisicing elit.
+							Adipisci mollitia voluptates ad,
+							illum voluptatum aliquam quod
+							nesciunt recusandae dignissimos sunt
+							dolore eius facere nam optio quae
+							molestiae? A, est beatae?
+						</p>
+						<p class="Paragraph">
+							Lorem ipsum dolor sit amet
+							consectetur, adipisicing elit.
+							Adipisci mollitia voluptates ad,
+							illum voluptatum aliquam quod
+							nesciunt recusandae dignissimos sunt
+							dolore eius facere nam optio quae
+							molestiae? A, est beatae?
+						</p>
+						<p class="Paragraph">
+							Lorem ipsum dolor sit amet
+							consectetur, adipisicing elit.
+							Adipisci mollitia voluptates ad,
+							illum voluptatum aliquam quod
+							nesciunt recusandae dignissimos sunt
+							dolore eius facere nam optio quae
+							molestiae? A, est beatae?
+						</p>
+					</div>
+				</div>
+				<aside class="AsideBlock AsideText">
+					<div class="TextBlock">
+						<h2 class="Subtitle">
+							Uod nesciunt recusandae
+						</h2>
+						<p class="Paragraph">
+							Lorem ipsum dolor sit amet
+							consectetur, adipisicing elit.
+							Adipisci mollitia voluptates ad,
+							illum voluptatum aliquam quod
+							nesciunt recusandae dignissimos sunt
+							dolore eius facere nam optio quae
+							molestiae? A, est beatae?
+						</p>
+						<p class="Paragraph">
+							Lorem ipsum dolor sit amet
+							consectetur, adipisicing elit.
+							Adipisci mollitia voluptates ad,
+							illum voluptatum aliquam quod
+							nesciunt recusandae dignissimos sunt
+							dolore eius facere nam optio quae
+							molestiae? A, est beatae?
+						</p>
+					</div>
+				</aside>
+			</div>
+		</section>
 
-          <a href="stageMosaique.html" class="navbar-item">Les cours et stages de mosaiques</a>
+		<section id="section4">
+			<header
+				class="BigTitle-Container ContactText"
+			>
+				<h1 class="BigTitle">C o n t a c t</h1>
+			</header>
+			<div class="Section-Content ContactContent">
+				<div class="TextBlock">
+					<p class="Paragraph ContactParagraph">
+						Lorem ipsum dolor sit amet
+						consectetur, adipisicing elit.
+						Adipisci mollitia voluptates ad, illum
+						voluptatum aliquam quod nesciunt
+						recusandae dignissimos sunt dolore
+						eius facere nam optio quae molestiae?
+						A, est beatae?
+					</p>
+				</div>
+				<form
+					action="mailto:dorian.moulart@gmail.com?subject=ContactArtTherapie:"
+					method="get"
+					enctype="text/plain"
+					class="ContactForm"
+				>
+					<label for="fname">Prénom</label>
+					<input
+						type="text"
+						id="fname"
+						name="firstname"
+						placeholder="Votre nom.."
+						required
+					/>
+					<label for="subject">Message</label>
+					<textarea
+						id="subject"
+						name="subject"
+						class="subject"
+						required
+					></textarea>
+					<input type="submit" value="Envoyer" />
+				</form>
+			</div>
+			<canvas
+				class="Board-Canvas"
+				id="canvas2"
+			></canvas>
+			<!-- <img src="ContactFormBackground.png" class="ContactBackgroundImage">-->
+		</section>
+	</body>
 
-          <a href="" class="navbar-item">Contact</a>
+	<script src="./Canima/Support/Canvarea.js "></script>
+	<script src="./Canima/Geometry/Figure.js "></script>
+	<script src="./Canima/Geometry/Line.js "></script>
+	<script src="./Canima/Geometry/Curve.js "></script>
+	<script src="./Canima/Medium/Filter.js "></script>
+	<script src="./Canima/Medium/Brushstroke.js "></script>
+	<script src="./Canima/Color/Gradient.js "></script>
+	<script src="./Canima/Geometry/Text.js "></script>
 
-      </div>
-    </nav>
-  </div>
-  </header>
+	<script src="./Canima/Architecture/Canima.js "></script>
 
-  <section class="section">
-    <div class="container">
-      <div class="content">
-        <p>L’Atelier de St-Gué est un lieu de création, d’échange et de partage autour des arts plastiques situé en Pays Bigouden à Saint-Guénolé, Penmarch. <br>
-          Marie-Laure Moulart-Barcelo - artiste-mosaïste et art-thérapeute - 
-          vous accueille à l’Atelier pour vous initier à sa pratique artistique à travers des cours et stages de mosaïque ponctuels ou réguliers et ouverts à toutes et tous. <br>
-          Visiter l’Atelier est aussi l’occasion de découvrir les créations originales de Marie-Laure ou de lui passer une commande personnalisée. <br>
-          Enfin, vous pouvez bénéficier à l’Atelier de séances d’art thérapie : un accompagnement thérapeutique individualisé qui exploite votre potentiel artistique pour retrouver sérénité et joie de vivre.
-          </p>
-
-      </div>
-    </div>
-
-
-  </section>
-  
-
-  <!-- <footer class="footer">
-    <div class="container">
-      <div class="content has-text-centered">
-        Footer
-      </div>
-    </div>
-  </footer> -->
-
-</body>
+	<script src="brushStrokesDefs.js "></script>
+	<script src="canvasDisplay.js "></script>
 </html>
