--- a/index.html
+++ b/index.html
@@ -118,16 +118,21 @@
 		<section id="section3">
 			<header class="BigTitle-Container">
 				<h1 class="BigTitle">
-					L o r e m &nbsp;&nbsp;&nbsp; I p s u m
+					<!-- L o r e m &nbsp;&nbsp;&nbsp; I p s u m -->
 				</h1>
 			</header>
 			<div class="Section-Content">
 				<div class="TextContent">
 					<div class="TextBlock">
-						<h2 class="Subtitle">
-							Uod nesciunt recusandae
-						</h2>
+						<h2 class="Subtitle">La galerie</h2>
 						<p class="Paragraph">
+							Visiter l’Atelier est aussi
+							l’occasion de découvrir les
+							créations originales de Marie-Laure
+							ou de lui passer une commande
+							personnalisée.
+						</p>
+						<!-- <p class="Paragraph">
 							Lorem ipsum dolor sit amet
 							consectetur, adipisicing elit.
 							Adipisci mollitia voluptates ad,
@@ -135,19 +140,32 @@
 							nesciunt recusandae dignissimos sunt
 							dolore eius facere nam optio quae
 							molestiae? A, est beatae?
-						</p>
-						<p class="Paragraph">
-							Lorem ipsum dolor sit amet
-							consectetur, adipisicing elit.
-							Adipisci mollitia voluptates ad,
-							illum voluptatum aliquam quod
-							nesciunt recusandae dignissimos sunt
-							dolore eius facere nam optio quae
-							molestiae? A, est beatae?
-						</p>
+						</p> -->
 					</div>
 					<div class="TextBlock">
 						<h2 class="Subtitle">
+							L'art thérapie
+						</h2>
+						<p class="Paragraph">
+							Vous pouvez bénéficier à l’Atelier
+							de séances d’art thérapie : un
+							accompagnement thérapeutique
+							individualisé qui exploite votre
+							potentiel artistique pour retrouver
+							sérénité et joie de vivre.
+						</p>
+						<!-- <p class="Paragraph">
+							Lorem ipsum dolor sit amet
+							consectetur, adipisicing elit.
+							Adipisci mollitia voluptates ad,
+							illum voluptatum aliquam quod
+							nesciunt recusandae dignissimos sunt
+							dolore eius facere nam optio quae
+							molestiae? A, est beatae?
+						</p> -->
+					</div>
+					<!-- <div class="TextBlock">
+						<h2 class="Subtitle">
 							Uod nesciunt recusandae
 						</h2>
 						<p class="Paragraph">
@@ -177,7 +195,7 @@
 							dolore eius facere nam optio quae
 							molestiae? A, est beatae?
 						</p>
-					</div>
+					</div> -->
 				</div>
 				<aside class="AsideBlock AsideText">
 					<div class="TextBlock">
@@ -216,13 +234,10 @@
 			<div class="Section-Content ContactContent">
 				<div class="TextBlock">
 					<p class="Paragraph ContactParagraph">
-						Lorem ipsum dolor sit amet
-						consectetur, adipisicing elit.
-						Adipisci mollitia voluptates ad, illum
-						voluptatum aliquam quod nesciunt
-						recusandae dignissimos sunt dolore
-						eius facere nam optio quae molestiae?
-						A, est beatae?
+						Vous avez une question, une suggestion
+						ou souhaitez simplement prendre
+						contact ? N'hésitez pas à m'envoyer un
+						petit mot :).
 					</p>
 				</div>
 				<form
