Add aside imageé

--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
 
 		<section id="section3">
 			<header class="BigTitle-Container">
-				<h1 class="BigTitle">
-					<!-- L o r e m &nbsp;&nbsp;&nbsp; I p s u m -->
-				</h1>
+				<!-- <h1 class="BigTitle">
+					  L o r e m &nbsp;&nbsp;&nbsp; I p s u m 
+				</h1> -->
 			</header>
 			<div class="Section-Content">
 				<div class="TextContent">
@@ -198,8 +198,18 @@
 					</div> -->
 				</div>
 				<aside class="AsideBlock AsideText">
-					<div class="TextBlock">
-						<h2 class="Subtitle">
+					<img
+						class="Image"
+						src="brushStrokes.png"
+						style="
+							object-fit: cover;
+							height: 500px;
+							max-width: 80vw;
+							/*margin: auto;*/
+						"
+					/>
+					<!-- <div class="TextBlock"> -->
+					<!-- <h2 class="Subtitle">
 							Uod nesciunt recusandae
 						</h2>
 						<p class="Paragraph">
@@ -219,8 +229,8 @@
 							nesciunt recusandae dignissimos sunt
 							dolore eius facere nam optio quae
 							molestiae? A, est beatae?
-						</p>
-					</div>
+						</p> -->
+					<!-- </div> -->
 				</aside>
 			</div>
 		</section>
